--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@splidejs/react-splide": "^0.7.12",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.4.8",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
