feat (gallery): use Swiper

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "@splidejs/splide": "^4.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sweetalert2": "^11.6.13",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
