feat (hero): render counters from dashboard data

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_FORM_HOST = https://kofi-api-abc8f4a756be.herokuapp.com
+VITE_DASHBOARD_API = https://nyx-dashboard-9d6bc2997f55.herokuapp.com/api
