feat (top-bar): layout & responsive & cookies

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_FORM_HOST = https://kofi-api-abc8f4a756be.herokuapp.com
 VITE_DASHBOARD_API = https://nyx-dashboard-9d6bc2997f55.herokuapp.com/api
+VITE_DASHBOARD_HOST = https://dashboard.nyxtrackers.com
