--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
-    "swiper": "^10.0.4"
+    "swiper": "^11.1.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "gh-pages": "^6.1.1",
-    "vite": "^4.0.0"
+    "sass": "^1.77.8",
+    "vite": "^5.3.4"
   }
 }
