--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
