--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_DASHBOARD_API = https://nyx-dashboard-9d6bc2997f55.herokuapp.com/api
+VITE_DASHBOARD_API = https://dashboard.nyxtrackers.com/api
 VITE_DASHBOARD_HOST = https://dashboard.nyxtrackers.com
