--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
+    "react-router": "^7.0.1",
     "react-select": "^5.8.0",
     "react-tooltip": "^5.28.0",
     "sweetalert2": "^11.6.13",
